Fix: bug on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -406,7 +406,7 @@ button[onclick="openPasswordModal()"] {
 }
 
 @media screen and (max-width: 768px) {
-    /* .term-window {
+    .term-window {
         width: 100vw !important;
         left: 0 !important;
         top: 0 !important;
@@ -417,22 +417,9 @@ button[onclick="openPasswordModal()"] {
         flex-direction: column !important;
         z-index: 9999 !important;
         background: #1e1e1e;
-    } */
-    .term-window {
-        width: 100vw !important;
-        left: 0 !important;
-        top: 0 !important;
-        /* Убираем 100vh, высоту будет ставить JS через visualViewport */
         height: 100% !important; 
-        margin: 0 !important;
-        border: none !important;
-        position: fixed !important;
-        display: flex !important;
-        flex-direction: column !important;
-        z-index: 9999 !important;
-        /* Убираем лишние трансформации, чтобы не мешать позиционированию */
-        transform: none !important; 
     }
+
 
     .term-header {
         flex: 0 0 auto !important;
@@ -449,6 +436,10 @@ button[onclick="openPasswordModal()"] {
         flex-wrap: wrap !important;
         overflow: hidden !important;
         touch-action: manipulation;
+
+        position: relative;
+        z-index: 10001;
+        background: #222;
     }
 
     .term-btn {
@@ -460,8 +451,5 @@ button[onclick="openPasswordModal()"] {
 
     .xterm-helper-textarea {
         display: block !important;
-        fixed: absolute !important;
-        top: 0 !important;
-        left: 0 !important;
     }
 }
